--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "absolute",
-	"description": "Absolute.app",
+	"name": "absolute.app/core",
+	"description": "Absolute",
 	"keywords": ["absolute"],
 	"type": "project",
 	"license": ["MIT", "BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
@@ -20,7 +20,10 @@
 		"nette/utils": "^2.4",
 		"latte/latte": "^2.4",
 		"tracy/tracy": "^2.4",
-		"mpdf/mpdf": "^7.1"
+		"mpdf/mpdf": "^7.1",
+		"absolute.app/auth": "^1.0",
+		"absolute.app/note": "^1.0",
+		"absolute.app/user": "^1.0"
 	},
 	"require-dev": {
 		"nette/tester": "^2.0"
