--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "absolute.app/core",
+	"name": "absolute.app/project",
 	"description": "Absolute",
 	"keywords": ["absolute"],
 	"type": "project",
