Composer update dependency absolute.app/team
Composer update dependency absolute.app/team

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "absolute.app/auth": "dev-master",
     "absolute.app/file": "dev-master",
     "absolute.app/note": "dev-master",
-    "absolute.app/user": "dev-master"
+    "absolute.app/user": "dev-master",
+    "absolute.app/team": "dev-master"
   },
   "require-dev": {
     "nette/tester": "^2.0"
