--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "absolute.app/team": "dev-master",
     "absolute.app/label": "dev-master",
     "absolute.app/todo": "dev-master",
-    "absolute.app/projects": "dev-master"
+    "absolute.app/projects": "dev-master",
+    "absolute.app/label": "dev-master"
   },
   "require-dev": {
     "nette/tester": "^2.0"
