--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "absolute.app/projects": "dev-master",
     "absolute.app/label": "dev-master",
     "absolute.app/event": "dev-master",
-    "absolute.app/group": "dev-master"
+    "absolute.app/group": "dev-master",
+    "absolute.app/menu": "dev-master"
   },
   "require-dev": {
     "nette/tester": "^2.0"
