--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,12 @@
     "absolute.app/label": "dev-master",
     "absolute.app/todo": "dev-master",
     "absolute.app/projects": "dev-master",
-    "absolute.app/label": "dev-master",
     "absolute.app/event": "dev-master",
     "absolute.app/group": "dev-master",
     "absolute.app/menu": "dev-master",
+    "absolute.app/projects": "dev-master",
     "absolute.app/category": "dev-master",
+    "absolute.app/page": "dev-master"
   },
   "require-dev": {
     "nette/tester": "^2.0"
