--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,9 @@
     "absolute.app/event": "dev-master",
     "absolute.app/group": "dev-master",
     "absolute.app/menu": "dev-master",
-    "absolute.app/projects": "dev-master",
     "absolute.app/category": "dev-master",
-    "absolute.app/page": "dev-master"
+    "absolute.app/page": "dev-master",
+    "absolute.app/setting": "dev-master"
   },
   "require-dev": {
     "nette/tester": "^2.0"
